--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -31,16 +31,16 @@
   svg {
     fill: @white;
   }
-}
 
-.social-list__item:hover {
-  background-color: @blue-hover;
-}
+  &:hover {
+    background-color: @blue-hover;
+  }
 
-.social-list__item:active {
-  background-color: @blue-down;
+  &:active {
+    background-color: @blue-down;
 
-  svg {
-    fill: @blue-text;
+    svg {
+      fill: @blue-text;
+    }
   }
 }
