--- a/source/less/blocks/introduce-form.less
+++ b/source/less/blocks/introduce-form.less
@@ -2,16 +2,16 @@
   position: relative;
   padding: 0;
   padding-top: 1px;
-}
 
-.introduce-form::after {
-  content: "";
-  position: absolute;
-  bottom: -26px;
-  left: -21px;
-  width: 320px;
-  height: 1px;
-  background-color: @grey-border;
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -26px;
+    left: -21px;
+    width: 320px;
+    height: 1px;
+    background-color: @grey-border;
+  }
 }
 
 .introduce-form__label {
@@ -37,28 +37,28 @@
   background-color: @grey-field;
   border: none;
   outline: none;
-}
 
-.introduce-form__field:hover {
-  background-color: @grey-border;
-}
+  &:hover {
+    background-color: @grey-border;
+  }
 
-.introduce-form__field:active,
-.introduce-form__field:focus {
-  background-color: @white;
-  outline: 4px solid @grey-main-decor;
-}
+  &:active,
+  &:focus {
+    background-color: @white;
+    outline: 4px solid @grey-main-decor;
+  }
 
-.introduce-form__field--name {
-  width: 230px;
-}
+  &--name {
+    width: 230px;
+  }
 
-.introduce-form__field--surname {
-  width: 191px;
-}
+  &--surname {
+    width: 191px;
+  }
 
-.introduce-form__field--patronymic {
-  width: 193px;
+  &--patronymic {
+    width: 193px;
+  }
 }
 
 .introduce-form__input-label {
@@ -69,12 +69,12 @@
   .introduce-form {
     padding-top: 0;
     width: 265px;
-  }
 
-  .introduce-form::after {
-    bottom: -47px;
-    left: 143px;
-    width: 124px;
+    &::after {
+      bottom: -47px;
+      left: 143px;
+      width: 124px;
+    }
   }
 
   .introduce-form__label {
@@ -93,16 +93,18 @@
     cursor: pointer;
   }
 
-  .introduce-form__field--name {
-    width: 215px;
-  }
+  .introduce-form__field {
+    &--name {
+      width: 215px;
+    }
 
-  .introduce-form__field--surname {
-    width: 177px;
-  }
+    &--surname {
+      width: 177px;
+    }
 
-  .introduce-form__field--patronymic {
-    width: 179px;
+    &--patronymic {
+      width: 179px;
+    }
   }
 }
 
@@ -110,12 +112,12 @@
   .introduce-form {
     width: 50%;
     padding-left: 80px;
-  }
 
-  .introduce-form::after {
-    bottom: -46px;
-    left: 200px;
-    width: 279px;
+    &::after {
+      bottom: -46px;
+      left: 200px;
+      width: 279px;
+    }
   }
 
   .introduce-form__label {
@@ -128,17 +130,17 @@
 
   .introduce-form__field {
     height: 58px;
-  }
 
-  .introduce-form__field--name {
-    width: 350px;
-  }
+    &--name {
+      width: 350px;
+    }
 
-  .introduce-form__field--surname {
-    width: 311px;
-  }
+    &--surname {
+      width: 311px;
+    }
 
-  .introduce-form__field--patronymic {
-    width: 315px;
+    &--patronymic {
+      width: 315px;
+    }
   }
 }
