--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -8,17 +8,17 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 17px;
-}
 
-.pictures-list__item:nth-child(2) {
-  padding-top: 21px;
-  padding-bottom: 18px;
-}
+  &:nth-child(2) {
+    padding-top: 21px;
+    padding-bottom: 18px;
+  }
 
-.pictures-list__item:nth-child(3),
-.pictures-list__item:nth-child(4) {
-  padding-top: 22px;
-  padding-bottom: 16px;
+  &:nth-child(3),
+  &:nth-child(4) {
+    padding-top: 22px;
+    padding-bottom: 16px;
+  }
 }
 
 .pictures-list__img {
@@ -72,6 +72,10 @@
     padding: 0;
     margin: 0;
     border-bottom: none;
+
+    &--bg-grey {
+      background-color: @grey-gallery;
+    }
   }
 
   .pictures-list__item:first-of-type {
@@ -118,10 +122,6 @@
 
   .pictures-list__likes {
     align-self: center;
-  }
-
-  .pictures-list__item--bg-grey {
-    background-color: @grey-gallery;
   }
 }
 
