--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -105,6 +105,19 @@
 .reasons-list__item {
   position: relative;
 
+  &:last-child {
+    padding-bottom: 13px;
+  }
+
+  &:first-child::before {
+    content: "";
+    position: absolute;
+    top: -21px;
+    width: 320px;
+    height: 37px;
+    background-image: url("../img/bg-triangle.svg");
+  }
+
   &--bg-grey {
     position: relative;
     text-align: center;
@@ -141,19 +154,6 @@
     padding-left: 70px;
     padding-right: 20px;
   }
-}
-
-.reasons-list__item:last-child {
-  padding-bottom: 13px;
-}
-
-.reasons-list__item:first-child::before {
-  content: "";
-  position: absolute;
-  top: -21px;
-  width: 320px;
-  height: 37px;
-  background-image: url("../img/bg-triangle.svg");
 }
 
 @media (min-width: @tablet-width) {
