--- a/source/less/blocks/sightseen-form.less
+++ b/source/less/blocks/sightseen-form.less
@@ -2,16 +2,16 @@
   position: relative;
   padding: 0;
   padding-top: 19px;
-}
 
-.sightseen-form::after {
-  content: "";
-  position: absolute;
-  bottom: -42px;
-  left: -21px;
-  width: 320px;
-  height: 1px;
-  background-color: @grey-border;
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -42px;
+    left: -21px;
+    width: 320px;
+    height: 1px;
+    background-color: @grey-border;
+  }
 }
 
 .sightseen-form__label {
@@ -36,25 +36,25 @@
   text-transform: none;
   font-weight: bold;
   padding-left: 79px;
-}
 
-.sightseen-form__input-label::before {
-  content: "";
-  position: absolute;
-  top: -14px;
-  left: 0;
-  width: 55px;
-  height: 55px;
-  border-radius: 4px;
-  background-color: @grey-field;
-}
+  &::before {
+    content: "";
+    position: absolute;
+    top: -14px;
+    left: 0;
+    width: 55px;
+    height: 55px;
+    border-radius: 4px;
+    background-color: @grey-field;
+  }
 
-.sightseen-form__input-label:hover::before {
-  background-color: @grey-border;
-}
+  &:hover::before {
+    background-color: @grey-border;
+  }
 
-.sightseen-form__input-label:active::before {
-  background-color: @grey-main-decor;
+  &:active::before {
+    background-color: @grey-main-decor;
+  }
 }
 
 .sightseen-form__field:checked + .sightseen-form__input-label::after {
@@ -76,26 +76,26 @@
   .sightseen-form {
     width: 100%;
     padding-top: 29px;
-  }
 
-  .sightseen-form::after {
-    content: "";
-    position: absolute;
-    top: 54px;
-    left: 0;
-    width: 125px;
-    height: 1px;
-    background-color: @grey-border;
-  }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 54px;
+      left: 0;
+      width: 125px;
+      height: 1px;
+      background-color: @grey-border;
+    }
 
-  .sightseen-form::before {
-    content: "";
-    position: absolute;
-    top: 54px;
-    right: 0;
-    width: 125px;
-    height: 1px;
-    background-color: @grey-border;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 54px;
+      right: 0;
+      width: 125px;
+      height: 1px;
+      background-color: @grey-border;
+    }
   }
 
   .sightseen-form__label {
@@ -115,10 +115,10 @@
 
   .sightseen-form__input {
     width: 200px;
-  }
 
-  .sightseen-form__input:not(:last-of-type) {
-    margin-bottom: 47px;
+    &:not(:last-of-type) {
+      margin-bottom: 47px;
+    }
   }
 
   .sightseen-form__input-label {
@@ -127,14 +127,16 @@
 }
 
 @media (min-width: @desctop-width) {
-  .sightseen-form::after {
-    top: 78px;
-    width: 279px;
-  }
+  .sightseen-form {
+    &::after {
+      top: 78px;
+      width: 279px;
+    }
 
-  .sightseen-form::before {
-    top: 78px;
-    width: 279px;
+    &::before {
+      top: 78px;
+      width: 279px;
+    }
   }
 
   .sightseen-form__label {
@@ -147,11 +149,13 @@
     margin: 0 auto;
   }
 
-  .sightseen-form__input:first-of-type {
-    margin-right: 20px;
-  }
+  .sightseen-form__input {
+    &:first-of-type {
+      margin-right: 20px;
+    }
 
-  .sightseen-form__input:nth-of-type(2) {
-    margin-right: 20px;
+    &:nth-of-type(2) {
+      margin-right: 20px;
+    }
   }
 }
