--- a/source/less/blocks/error-window.less
+++ b/source/less/blocks/error-window.less
@@ -8,6 +8,7 @@
   text-align: center;
   background-color: @white;
   box-shadow: 0 0 15px 0 @grey-shadow;
+  z-index: 1;
   display: none;
 }
 
@@ -39,7 +40,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-left: -384px;
+    transform: translate(-50%, -50%);
     width: 400px;
     height: 347px;
     padding-top: 55px;
