--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,6 @@
 .main-nav {
   position: relative;
+  margin-bottom: 56px;
 }
 
 .main-nav__logo {
@@ -42,6 +43,7 @@
 @media (min-width: @desctop-width) {
   .main-nav {
     width: 1200px;
+    margin-bottom: 1px;
   }
 
   .main-nav__logo {
