--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -4,7 +4,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  margin-bottom: 3px;
+  margin-bottom: 0;
 }
 
 .reasons-list__bg-blue-wrapper {
@@ -160,6 +160,7 @@
   .reasons-list {
     flex-direction: row;
     flex-wrap: wrap;
+    margin-bottom: 3px;
   }
 
   .reasons-list__bg-blue-wrapper {
