--- a/source/less/blocks/error-window.less
+++ b/source/less/blocks/error-window.less
@@ -1,6 +1,9 @@
 .error-window {
   position: fixed;
-  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 320px;
   height: 280px;
   margin: 0 auto;
   padding-top: 24px;
@@ -9,8 +12,7 @@
   text-align: center;
   background-color: @white;
   box-shadow: 0 0 15px 0 @grey-shadow;
-  z-index: 1;
-  display: none;
+  z-index: 5;
 }
 
 .error-window__title {
@@ -38,9 +40,6 @@
 
 @media (min-width: @tablet-width) {
   .error-window {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 400px;
     height: 347px;
     padding-top: 55px;
