--- a/source/less/blocks/cite-nav.less
+++ b/source/less/blocks/cite-nav.less
@@ -46,13 +46,11 @@
     background-color: @white;
     padding-top: 8px;
     padding-bottom: 8px;
-    padding-left: 25px;
-    padding-right: 3px;
   }
 
   .cite-nav__item {
+    width: 20%;
     padding: 0;
-    margin-right: 100px;
     border: none;
 
     a {
@@ -60,21 +58,16 @@
       color: @black;
     }
 
-    &:first-child {
-      margin-right: 78px;
-    }
-
     &:last-child {
       box-shadow: none;
-      margin-right: 0;
     }
 
     &:nth-child(2) {
-      margin-right: 208px;
+      margin-right: 20%;
     }
 
-    &:nth-child(3) {
-      margin-right: 50px;
+    &:nth-child(4n + 2) {
+      margin-right: 20%;
     }
 
     &:hover {
@@ -111,21 +104,6 @@
   .cite-nav {
     display: flex;
     background-color: @white;
-    padding-left: 91px;
     padding-top: 7px;
-  }
-
-  .cite-nav__item {
-    &:first-child {
-      margin-right: 162px;
-    }
-
-    &:nth-child(2) {
-      margin-right: 383px;
-    }
-
-    &:nth-child(3) {
-      margin-right: 136px;
-    }
   }
 }
