--- a/source/less/blocks/pictures-list.less
+++ b/source/less/blocks/pictures-list.less
@@ -93,7 +93,7 @@
     padding: 0;
 
     .pictures-list__description {
-      margin-right: 37px;
+      margin-right: 41px;
     }
   }
 
@@ -101,7 +101,7 @@
     padding: 0;
 
     .pictures-list__description {
-      margin-right: 102px;
+      margin-right: 107px;
     }
   }
 
@@ -109,7 +109,7 @@
     padding: 0;
 
     .pictures-list__description {
-      margin-right: 102px;
+      margin-right: 107px;
     }
   }
 
@@ -122,6 +122,11 @@
 
   .pictures-list__likes {
     align-self: center;
+    margin-bottom: 5px;
+
+    svg {
+      margin-right: 6px;
+    }
   }
 }
 
@@ -169,25 +174,25 @@
     }
 
     .pictures-list__description {
-      margin-right: 949px;
+      margin-right: 950px;
     }
   }
 
   .pictures-list__item:nth-child(2) {
     .pictures-list__description {
-      margin-right: 115px;
+      margin-right: 117px;
     }
   }
 
   .pictures-list__item:nth-child(3) {
     .pictures-list__description {
-      margin-right: 180px;
+      margin-right: 182px;
     }
   }
 
   .pictures-list__item:nth-child(4) {
     .pictures-list__description {
-      margin-right: 182px;
+      margin-right: 184px;
     }
   }
 }
