video el hovered

--- a/source/less/blocks/video-list.less
+++ b/source/less/blocks/video-list.less
@@ -74,6 +74,14 @@
   svg {
     fill: @grey-icons;
   }
+
+  &:hover svg {
+    fill: @grey-player;
+  }
+
+  &:active svg {
+    fill: @grey-player-down;
+  }
 }
 
 .video-list__subtitles {
@@ -84,6 +92,14 @@
   svg {
     fill: @grey-icons;
   }
+
+  &:hover svg {
+    fill: @grey-player;
+  }
+
+  &:active svg {
+    fill: @grey-player-down;
+  }
 }
 
 .video-list__fullscreen {
@@ -93,6 +109,14 @@
 
   svg {
     fill: @grey-icons;
+  }
+
+  &:hover svg {
+    fill: @grey-player;
+  }
+
+  &:active svg {
+    fill: @grey-player-down;
   }
 }
 
@@ -143,6 +167,14 @@
     svg {
       fill: @white;
     }
+
+    &:hover svg {
+      fill: @light-grey;
+    }
+
+    &:active svg {
+      fill: @light-grey-down;
+    }
   }
 
   .video-list__subtitles {
@@ -152,6 +184,14 @@
     svg {
       fill: @white;
     }
+
+    &:hover svg {
+      fill: @light-grey;
+    }
+
+    &:active svg {
+      fill: @light-grey-down;
+    }
   }
 
   .video-list__fullscreen {
@@ -160,6 +200,14 @@
 
     svg {
       fill: @white;
+    }
+
+    &:hover svg {
+      fill: @light-grey;
+    }
+
+    &:active svg {
+      fill: @light-grey-down;
     }
   }
 }
