--- a/source/less/globals/variables.less
+++ b/source/less/globals/variables.less
@@ -21,6 +21,10 @@
 @grey-icons: #5c6870;
 @grey-links-down: #b2b2b2;
 @grey-main-decor: #d6d6d6;
+@grey-player: #333333;
+@grey-player-down: #b8b8b8;
+@light-grey: #c2c2c2;
+@light-grey-down: #949494;
 
 @white: #ffffff;
 
