--- a/source/less/blocks/reasons-list.less
+++ b/source/less/blocks/reasons-list.less
@@ -164,7 +164,7 @@
   }
 
   .reasons-list__bg-blue-wrapper {
-    padding-top: 44px;
+    padding-top: 45px;
   }
 
   .reasons-list__new-line-tablet {
@@ -182,7 +182,7 @@
     line-height: 26px;
     padding: 0;
     margin: 0;
-    margin-bottom: 7px;
+    margin-bottom: 6px;
   }
 
 
@@ -250,7 +250,7 @@
 
   .reasons-list__item {
     &--bg-grey {
-      padding-top: 45px;
+      padding-top: 46px;
       padding-bottom: 29px;
       padding-left: 24px;
     }
@@ -269,10 +269,10 @@
   .reasons-list__add-info {
     text-align: center;
     background-color: @white;
-    padding-top: 134px;
+    padding-top: 135px;
     padding-left: 0;
     padding-right: 0;
-    padding-bottom: 48px;
+    padding-bottom: 46px;
   }
 
   .reasons-list__item:first-child::before {
@@ -290,6 +290,10 @@
   .reasons-list__item:nth-child(3) {
     order: 4;
     width: 33.4%;
+
+    .reasons-list__add-info-wrapper {
+      margin-right: 46px;
+    }
   }
 
   .reasons-list__item:nth-child(4) {
@@ -393,6 +397,12 @@
     background-color: @white;
     padding-left: 0;
     padding-bottom: 65px;
+  }
+
+  .reasons-list__item:nth-child(3) {
+    .reasons-list__add-info-wrapper {
+      margin-right: 57px;
+    }
   }
 
   .reasons-list__item:nth-child(4) {
