--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -6,7 +6,6 @@
 
 .page-main__header {
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-size: cover;
   background-repeat: no-repeat;
   background-color: @blue-bg;
 
@@ -15,6 +14,7 @@
     height: 389px;
     padding-top: 90px;
     text-align: center;
+    background-size: cover;
     overflow: hidden;
   }
 
@@ -32,6 +32,7 @@
 
   &--inner {
     position: relative;
+    background-position: center bottom;
     height: 158px;
     padding-top: 52px;
     margin-bottom: 38px;
